test/patterns/negative/redundant1.mli.expected

*******************************
********** Parsed file ********
*******************************
val f : int -> int[@@gospel
                    {| y = f x
    ensures match x with
    | _ -> true
    | 1i -> false |}]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Stdlib *)

(*@ open Gospelstdlib *)

val f : int -> int
(*@ y = f x
    ensures ...
     *)
File "redundant1.mli", line 3, characters 12-58:
Error: The pattern-matching is redundant.
       Here is a case that is unused:
         1i.
